# i3nator

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile.build  README.md  bors.toml  build.rs  index.html  release.toml
.github/workflows/: cargo-audit.yml  ci.yml  releases.yml
1.0.0/: search-index.js  source-files.js
1.0.0/i3nator/: all.html  index.html  sidebar-items.js
1.0.0/i3nator/errors/: enum.ErrorKind.html  index.html  trait.ResultExt.html
1.0.0/i3nator/projects/: fn.list.html  index.html  sidebar-items.js  struct.Project.html
1.0.0/i3nator/types/: enum.ExecType.html  index.html  sidebar-items.js  struct.Application.html  struct.ApplicationCommand.html  struct.Config.html  struct.Exec.html  struct.General.html
1.0.0/src/i3nator/: errors.rs.html  lib.rs.html  projects.rs.html  types.rs.html
1.1.0/: aliases.js  search-index.js  settings.html  source-files.js
1.1.0/i3nator/: all.html  index.html  sidebar-items.js
1.1.0/i3nator/configfiles/: fn.list.html  index.html  struct.ConfigFileImpl.html  trait.ConfigFile.html
1.1.0/i3nator/errors/: enum.ErrorKind.html  struct.Error.html
1.1.0/i3nator/layouts/: fn.list.html  index.html  struct.Layout.html
1.1.0/i3nator/projects/: fn.list.html  index.html  struct.Project.html
1.1.0/i3nator/types/: enum.ExecType.html  enum.Layout.html  index.html  struct.Application.html  struct.ApplicationCommand.html  struct.Config.html  struct.Exec.html  struct.General.html
1.1.0/implementors/error_chain/: trait.ChainedError.js
1.1.0/src/i3nator/: configfiles.rs.html  errors.rs.html  layouts.rs.html  lib.rs.html  projects.rs.html  shlex.rs.html  types.rs.html
1.2.0/: search-index.js
1.2.0-rc.1/: search-index.js
1.2.0-rc.1/i3nator/errors/: enum.ErrorKind.html  index.html
1.2.0-rc.1/i3nator/layouts/: fn.list.html  sidebar-items.js  struct.Layout.html
1.2.0-rc.1/i3nator/projects/: index.html
1.2.0-rc.1/i3nator/types/: enum.ExecType.html  struct.Application.html  struct.ApplicationCommand.html
1.2.0-rc.1/src/i3nator/: layouts.rs.html  shlex.rs.html
1.2.0/i3nator/: index.html
1.2.0/i3nator/configfiles/: index.html  struct.ConfigFileImpl.html
1.2.0/i3nator/errors/: type.Result.html
1.2.0/i3nator/layouts/: struct.Layout.html
1.2.0/i3nator/projects/: fn.list.html
1.2.0/i3nator/types/: enum.ExecType.html  index.html  sidebar-items.js  struct.Application.html  struct.Exec.html
1.2.0/src/i3nator/: projects.rs.html
examples/: exec.toml  simple.toml  template.toml
git/hooks/: pre-commit
hack/: cargo-release-hook.sh  check-license-headers.sh
main/: search-index.js  settings.html  source-files.js
main/i3nator/: all.html  index.html
main/i3nator/configfiles/: fn.list.html  index.html  sidebar-items.js  struct.ConfigFileImpl.html  trait.ConfigFile.html
main/i3nator/errors/: enum.ErrorKind.html  index.html  struct.Error.html  trait.ResultExt.html  (+1 more)
master/: crates.js  search-index.js  settings.html
master/i3nator/: all.html  index.html  sidebar-items.js
resources/: project_template.toml
src/: cli.rs  configfile.rs  configfiles.rs  deserializers.rs  errors.rs  layouts.rs  lib.rs  main.rs  projects.rs  shlex.rs  types.rs
tests/: projects.rs  types.rs
(+114 files in other folders)
