[package]
name = "i3nator"
version = "1.2.1-alpha.0"
edition = "2018"
authors = ["Pit Kleyersburg <pitkley@googlemail.com>"]
license = "MIT/Apache-2.0"
description = "i3nator is Tmuxinator for the i3 window manager"
homepage = "https://github.com/pitkley/i3nator"
repository = "https://github.com/pitkley/i3nator.git"
readme = "README.md"

categories = ["command-line-interface", "command-line-utilities", "gui"]
keywords = ["cli", "i3", "unix", "xdg"]

build = "build.rs"

include = [
    "**/*.rs",
    "resources/**/*",
    "Cargo.toml",
    "LICENSE-*",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = "^2.33"
dirs-next = "^1.0"
error-chain = "^0.12"
getch = "^0.2"
i3ipc = "^0.10"
lazy_static = "^1.4"
serde = { version = "^1.0", features = ["derive"] }
tempfile = "^3.1"
toml = "^0.5"
wait-timeout = "^0.2"
xdg = "^2.1"

[build-dependencies]
clap = "^2.33"

[dev-dependencies]
tempdir = "^0.3"

[[bin]]
name = "i3nator"
path = "src/main.rs"
doc = false

[features]
sequential-tests = []
