[package]
name = "i3nator"
version = "1.3.0-alpha.0"
edition = "2021"
authors = ["Pit Kleyersburg <pitkley@googlemail.com>"]
license = "MIT/Apache-2.0"
description = "i3nator is Tmuxinator for the i3 window manager"
homepage = "https://github.com/pitkley/i3nator"
repository = "https://github.com/pitkley/i3nator.git"
readme = "README.md"

categories = ["command-line-interface", "command-line-utilities", "gui"]
keywords = ["cli", "i3", "unix", "xdg"]

include = [
    "**/*.rs",
    "resources/**/*",
    "Cargo.toml",
    "LICENSE-*",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "3.2.15", features = ["cargo", "derive"] }
clap_complete = "3.1.4"
dirs-next = "2.0.0"
error-chain = "0.12.4"
getch = "0.3.1"
i3ipc = "0.10.1"
lazy_static = "1.4.0"
serde = { version = "1.0.142", features = ["derive"] }
tempfile = "3.3.0"
toml = "0.5.9"
wait-timeout = "0.2.0"
xdg = "2.4.1"

[dev-dependencies]
tempdir = "0.3.7"

[[bin]]
name = "i3nator"
path = "src/main.rs"
doc = false

[features]
sequential-tests = []
